# mkdocs-filter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  mcp-server.md  usage.md
docs/stylesheets/: extra.css
src/docs_output_filter/: display.py  mcp_server.py  modes.py
src/mkdocs_filter/: __init__.py  mcp_server.py  parsing.py
tests/: __init__.py  conftest.py  test_cli.py  test_display.py  test_integration.py  test_mcp_handlers.py  test_mcp_server.py  test_modes_unit.py  test_parsing.py
