[project]
name = "mkdocs-output-filter"
version = "0.1.0"
description = "Filter mkdocs build output to show only warnings and errors with nice formatting"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ian", email = "ian@example.com" }
]
keywords = ["mkdocs", "documentation", "cli", "filter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "click!=8.3.0,!=8.3.1",
    "mcp>=1.26.0",
    "rich>=13.0.0",
]

[project.scripts]
mkdocs-output-filter = "mkdocs_filter:main"

[project.urls]
Homepage = "https://github.com/ian/mkdocs-output-filter"
Repository = "https://github.com/ian/mkdocs-output-filter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_filter"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mkdocs_filter"]

[dependency-groups]
dev = [
    "markdown-exec>=1.12.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["mkdocs_filter"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
